feat: 공동 구매 목록 조회 주변주소 필터링